--- a/iOSTrial&Error/iOSTrial&Error/Base.lproj/Main.storyboard
+++ b/iOSTrial&Error/iOSTrial&Error/Base.lproj/Main.storyboard
@@ -267,7 +267,7 @@
         <scene sceneID="x79-pj-teK">
             <objects>
                 <collectionViewController id="n2D-nA-4QK" customClass="CategoryCollectionViewController" customModule="iOSTrial_Error" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="hk8-ZV-CiD">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="hk8-ZV-CiD">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -275,25 +275,57 @@
                             <size key="itemSize" width="150" height="150"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="8" minY="8" maxX="8" maxY="8"/>
+                            <inset key="sectionInset" minX="8" minY="25" maxX="8" maxY="25"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoryCell" id="nPk-hI-2Dz">
-                                <rect key="frame" x="8" y="8" width="150" height="150"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoryCell" id="nPk-hI-2Dz" customClass="CategoryCollectionViewCell" customModule="iOSTrial_Error" customModuleProvider="target">
+                                <rect key="frame" x="8" y="25" width="150" height="150"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Test" translatesAutoresizingMaskIntoConstraints="NO" id="Ncp-y2-sH2"/>
+                                        <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uIR-hR-HDy">
+                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="C1u-e0-8U1">
+                                                <frame key="frameInset"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.29999999999999999" translatesAutoresizingMaskIntoConstraints="NO" id="cES-FG-0kq">
+                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="cES-FG-0kq" firstAttribute="centerX" secondItem="C1u-e0-8U1" secondAttribute="centerX" id="0iW-kU-Nky"/>
+                                                    <constraint firstItem="cES-FG-0kq" firstAttribute="top" secondItem="C1u-e0-8U1" secondAttribute="top" constant="5" id="X0o-ks-A3L"/>
+                                                    <constraint firstAttribute="bottom" secondItem="cES-FG-0kq" secondAttribute="bottom" constant="4" id="f18-wD-ZXi"/>
+                                                </constraints>
+                                            </view>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="150" id="8OD-Po-iRd"/>
+                                                <constraint firstAttribute="height" constant="30" id="qcZ-kn-6wX"/>
+                                            </constraints>
+                                            <blurEffect style="light"/>
+                                        </visualEffectView>
                                     </subviews>
                                 </view>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="Ncp-y2-sH2" secondAttribute="trailing" id="1rm-px-j4Y"/>
+                                    <constraint firstAttribute="bottom" secondItem="uIR-hR-HDy" secondAttribute="bottom" id="KX1-6V-8k6"/>
                                     <constraint firstAttribute="bottom" secondItem="Ncp-y2-sH2" secondAttribute="bottom" id="Ngb-FV-uu2"/>
+                                    <constraint firstAttribute="trailing" secondItem="uIR-hR-HDy" secondAttribute="trailing" id="Rvl-MP-gbR"/>
+                                    <constraint firstItem="uIR-hR-HDy" firstAttribute="leading" secondItem="nPk-hI-2Dz" secondAttribute="leading" id="Vm3-Ng-7dc"/>
+                                    <constraint firstItem="uIR-hR-HDy" firstAttribute="top" secondItem="nPk-hI-2Dz" secondAttribute="top" constant="100" id="enu-Le-Wkt"/>
                                     <constraint firstItem="Ncp-y2-sH2" firstAttribute="leading" secondItem="nPk-hI-2Dz" secondAttribute="leading" id="hZ8-bv-3Oc"/>
                                     <constraint firstItem="Ncp-y2-sH2" firstAttribute="top" secondItem="nPk-hI-2Dz" secondAttribute="top" id="kGQ-3N-41z"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="categoryImageView" destination="Ncp-y2-sH2" id="W51-A3-8tz"/>
+                                    <outlet property="categoryTitleLabel" destination="cES-FG-0kq" id="BA2-Ha-azR"/>
+                                    <outlet property="visualEffectView" destination="uIR-hR-HDy" id="0AN-IO-77L"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
