--- a/iOSTrial&Error/iOSTrial&Error/Base.lproj/Main.storyboard
+++ b/iOSTrial&Error/iOSTrial&Error/Base.lproj/Main.storyboard
@@ -267,7 +267,7 @@
         <scene sceneID="x79-pj-teK">
             <objects>
                 <collectionViewController id="n2D-nA-4QK" customClass="CategoryCollectionViewController" customModule="iOSTrial_Error" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="hk8-ZV-CiD">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="hk8-ZV-CiD">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -384,6 +384,9 @@
                             <outlet property="delegate" destination="n2D-nA-4QK" id="QL9-UQ-wNO"/>
                         </connections>
                     </collectionView>
+                    <connections>
+                        <segue destination="rNi-Bc-1LM" kind="presentation" identifier="showTabViewForFirstTime" id="HYY-OO-iEc"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bhI-EH-s2q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -584,6 +587,6 @@
         <image name="userTab" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="lBm-Oc-jKU"/>
+        <segue reference="HYY-OO-iEc"/>
     </inferredMetricsTieBreakers>
 </document>
